test/schemas/fail/circular_import.sat
// ERROR: schemas/fail/circular_import_child.sat(2): Recursive import: schemas/fail/circular_import.sat
import "circular_import_child.sat";
